02/06/19:
* Now built with the Python 3 binding
13/04/19:
* Update to the 20190413 release
16/03/19:
* Update to the 20190316 release
* Switch to using the GDK backend over the X11 backend. VcXsrv has been removed.
  * For this switch, the old version of FontForge must be installed first.
31/07/17 (r2):
* Compile run_fontforge with Visual Studio 2015 to avoid antivirus false positives
31/07/17:
* Upgrade to Pango 1.40.7
* Sync with the 20170731 release
17/06/17:
* Upgrade to Freetype 2.8
* Upgrade to Cairo 1.15.6
* Upgrade to Pango 1.40.6
* Rebuild all X11 dependencies from git master
13/10/16:
* Minor release to fix some crashes (20161012 release)
04/10/16:
* Sync with the 20161005 release.
* Upgrade to Freetype 2.7.
23/09/16:
* Also bundle ssleay32.dll for the Python ssl module.
14/09/16:
* Updated application icons (finally)
  You may need to clear your icon cache for it to take effect.
13-08-16:
* Sync with git master (prerelease)
07-04-16:
* Fix crash in kern pairs dialogue (#2681)
* Fix preferences dialogue being too large (#2675)
05-04-16:
* Sync with the April 20160404 release
04-07-15 (14-06-15) (r4):
* Add in many more locales to bin/VcXsrv/locale/locale.alias
  This should fix titles not being displayed properly. (#2323)
14-06-15 (r3):
* Fix another bug in Unicode filename handling (#2364)
14-06-15:
* Fix bug in Window titles not being displayed properly
13-06-15:
* Sync with the June 20150612 release
* Fix clipboard pasting to/from FontForge
* Patching FontForge to work with filenames regardless of current locale
  (still somewhat experimental)
30-05-15:
* Patch Gnulib to make fopen and open assume UTF-8 filenames for opening files.
  This allows files with non-ASCII/English filenames to be opened IFF a UTF-8
  locale is used (see fontforge.bat)
* Port the MetaFont import function to Windows
* Fix autorecover 'forget' options (actually delete the files if a 'forget'
  option is requested)
* Fix saving hotkeys
26-05-15: